--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Base Apparel coming soon page</title>
-
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <style></style>
     <script defer src="./main.js"></script>
   </head>
@@ -22,7 +18,6 @@
     <header class="header">
       <img src="/images/logo.svg" alt="logo" />
     </header>
-
     <main class="hero flex">
       <div class="container left">
         <h1 class="uppercase">
@@ -35,7 +30,6 @@
           Add your email below to stay up-to-date with announcements and our
           launch deals.
         </p>
-
         <form id="form">
           <input
             id="email"
